# shion

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SELF_LEARNING.md  compose.yaml  docker-compose.yml  install.sh
.github/workflows/: release.yml
.scratch/briefing-skills/: PRD.md
.scratch/clarify-step/: PRD.md
.scratch/memory-quality/: PRD.md
.scratch/permission-policy/: PRD.md
.scratch/run-resume/: PRD.md
.scratch/skill-governance/: PRD.md
apps/electron-demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/electron-demo/electron/: main.cjs  preload.cjs
apps/electron-demo/src/: App.tsx  app-context.tsx  global.d.ts  main.tsx  styles.css  types.ts
apps/electron-demo/src/chat/: ChatView.tsx
apps/electron-demo/src/dashboard/: Dashboard.tsx
apps/electron-demo/src/lib/: ipc.ts  markdown.ts  query-client.ts
apps/electron-demo/src/main/: index.ts
apps/electron-demo/src/preload/: index.ts
apps/electron-demo/src/renderer/: Sidebar.tsx  assets.d.ts  global.d.ts  types.ts
apps/electron-demo/src/renderer/chat/: ChatView.tsx
apps/electron-demo/src/renderer/components/assistant-ui/: markdown-text.tsx
apps/electron-demo/src/renderer/components/ui/: badge.tsx  button.tsx  dialog.tsx  select.tsx  switch.tsx
apps/electron-demo/src/renderer/settings/: SettingsModal.tsx  panels.tsx
apps/electron-demo/src/renderer/styles/: main.css
apps/web/: README.md
crates/komo-core/src/: operator_view.rs
crates/komo-core/src/domain/: context.rs  cron.rs  events.rs  memory.rs  mod.rs  reminder.rs  repository.rs  run.rs  session.rs  task.rs
crates/komo-gui/src/: api.rs  md.rs
docs/: ARCHITECTURE.md  architecture-deepening-plan.md  config-shion-home-plan.md  memory-injection-plan.md  nas-ci.md  personal-agent-roadmap.md  recurring-reminder-implementation-plan.md  reminder-implementation-plan.md
docs/agents/: domain.md  triage-labels.md
skills/summarize-file/: SKILL.md
src/: config.rs  main.rs
src/agent/: daemon.rs  gateway.rs  interaction.rs  mod.rs  pairing.rs  planner.rs  policy_approver.rs  reviewer.rs  runtime.rs  system_prompt.rs
src/cli/: app.rs  approver.rs  chat.rs  cli.rs  daemon.rs  doctor.rs  dream.rs  gateway.rs  gateway_client.rs  health.rs  init.rs  inspect.rs  journey.rs  logs.rs  memory.rs  mod.rs  model.rs  pair.rs  policy.rs  resume.rs  service.rs  skill.rs  upgrade.rs  wechat.rs  wiring.rs  workday.rs
src/config/: mod.rs  report.rs  resolved.rs  sources.rs  write.rs
src/domain/: approval.rs  error.rs  gateway.rs  home.rs  llm.rs  memory.rs  message.rs  mod.rs  notify.rs  pairing.rs  planner.rs  policy.rs  reminder.rs  repository.rs  reviewer.rs  run.rs  session.rs  skill.rs  task.rs  todo.rs  tool.rs  workspace.rs
src/infra/: codex.rs  config.rs  db.rs  feishu.rs  gateway_client.rs  home_notifier.rs  kanban.rs  llm.rs  macos_notifier.rs  md_memory.rs  memory_db.rs  mod.rs  rendezvous.rs  rig_tool.rs  skill_install.rs  skills.rs  telegram.rs  unix_channel.rs  workday.rs
src/infra/memory/: md_memory.rs  memory_db.rs
src/infra/messaging/: api.rs  feishu.rs  homeassistant.rs  telegram.rs  wechat.rs
src/infra/persistence/: cron.rs  db.rs  kanban.rs  mod.rs
src/services/: clarify.rs  memory_enrichment.rs  mod.rs  skill_registry.rs  tool_registry.rs
src/services/operator_control/: actions.rs  direct.rs  gateway.rs  mod.rs  request.rs
src/services/tool_execution/: context.rs  mod.rs  result.rs  retry.rs
src/tools/: ask_user.rs  delegate.rs  file.rs  homeassistant.rs  http.rs  memory.rs  mod.rs  reminder.rs  session.rs  shell.rs  skill.rs  task.rs  time.rs  todo.rs  web_fetch.rs  web_search.rs
src/tui/: app.rs  approver.rs  mod.rs  ui.rs
