[package]
name = "shion"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
toasty = { version = "0.7.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
envy = "0.4"
toml = "0.8"
dirs = "5"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "query", "json"] }
open-lark = { version = "0.14", default-features = false, features = ["websocket", "im"] }
rig = { package = "rig-core", version = "0.38" }
tracing = "0.1"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1.23.3", features = ["v7"] }
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rustyline = "15"
