[package]
name = "shion"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
toasty = { version = "0.7.0", features = ["sqlite", "turso"] }
toasty-driver-turso = "0.7.0"
# Direct handle to the same Turso engine toasty uses, for the one thing toasty's
# typed API can't do: run a raw `ALTER TABLE ADD COLUMN` to migrate an existing
# memory.db in place (additive, no data loss). See `memory_db::ensure_columns`.
# Must stay on the same major as toasty-driver-turso's pin (`turso = "0.6"`):
# a second turso version both duplicates the engine over the same db files and
# drags in a second `#[global_allocator]` (mimalloc), which fails to link.
turso = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.103"
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
envy = "0.4"
toml = "1.1"
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "charset",
    "query",
    "json",
    "multipart",
] }
open-lark = { version = "0.14", default-features = false, features = [
    "websocket",
    "im",
] }
rig = { package = "rig-core", version = "0.39" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3.53", features = ["formatting", "macros"] }
uuid = { version = "1.23.4", features = ["v4", "v7"] }
sha2 = "0.11"
# Decode the Codex OAuth access-token JWT to read its `exp` / account-id claims
# (no signature verification — we only inspect the payload). See `infra/codex.rs`.
base64 = "0.22"
# Codex provider: a custom `rig` HTTP backend re-stamps the bearer per request,
# so we touch `http`/`bytes` types directly (versions matched to rig + reqwest).
http = "1"
bytes = "1"
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rustyline = "18.0.1"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
wechatbot = "=0.4.0"
qrcode = { version = "0.14.1", default-features = false }
# PNG only — render the wechat login QR for delivery over chat (no image codecs we don't need).
image = { version = "0.25", default-features = false, features = ["png"] }
# HTTP API channel: OpenAI-compatible + dashboard endpoints over a loopback port.
axum = "0.8"
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2.2"

[dev-dependencies]
# `test-util` (not part of tokio's `full`) enables `#[tokio::test(start_paused)]`,
# which auto-advances virtual time so retry-backoff tests don't sleep for real.
tokio = { version = "1.52.0", features = ["full", "test-util"] }
