[package]
name = "komo"
version = "0.1.0"
edition = "2024"

[dependencies]
komo-core = { path = "crates/komo-core" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
toasty = { version = "0.8.0", features = ["sqlite", "turso"] }
toasty-driver-turso = "0.8.0"
# Direct handle to the same Turso engine toasty uses, for the one thing toasty's
# typed API can't do: run a raw `ALTER TABLE ADD COLUMN` to migrate an existing
# memory.db in place (additive, no data loss). See `memory_db::ensure_columns`.
# Must stay on the same major as toasty-driver-turso's pin (`turso = "0.6"`):
# a second turso version both duplicates the engine over the same db files and
# drags in a second `#[global_allocator]` (mimalloc), which fails to link.
turso = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15"
envy = "0.4"
toml = "1.1"
dirs = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "charset",
    "query",
    "json",
    "multipart",
] }
open-lark = { version = "0.14", default-features = false, features = [
    "websocket",
    "im",
] }
rig = { package = "rig-core", version = "0.40" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
# Decode the Codex OAuth access-token JWT to read its `exp` / account-id claims
# (no signature verification — we only inspect the payload). See `infra/codex.rs`.
base64 = "0.22"
# Codex provider: a custom `rig` HTTP backend re-stamps the bearer per request,
# so we touch `http`/`bytes` types directly (versions matched to rig + reqwest).
http = "1"
bytes = "1"
croner = "3"
chrono = { workspace = true }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
# Both `ring` and `aws-lc-rs` are activated transitively. Select ring explicitly
# before any TLS client is constructed (notably open-lark's WebSocket runtime).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
wechatbot = "=0.4.0"
qrcode = { version = "0.14.1", default-features = false }
# PNG only — render the wechat login QR for delivery over chat (no image codecs we don't need).
image = { version = "0.25", default-features = false, features = ["png"] }
# HTTP API channel: OpenAI-compatible + dashboard endpoints over a loopback port.
axum = "0.8"
# Static-file serving for the api channel's optional web SPA (`web_dir`).
tower-http = { version = "0.6", features = ["fs"] }
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2.2"
# Markdown rendering for agent replies in the chat TUI.
pulldown-cmark = { version = "0.13", default-features = false }
tracing-appender = "0.2.5"
libc = "0.2"

[dev-dependencies]
# `test-util` (not part of tokio's `full`) enables `#[tokio::test(start_paused)]`,
# which auto-advances virtual time so retry-backoff tests don't sleep for real.
tokio = { version = "1.52.0", features = ["full", "test-util"] }

[workspace]
members = ["crates/komo-core", "crates/komo-gui"]
resolver = "3"

# Shared across the workspace so komo, komo-core, and komo-gui pin one version
# each. Crate-unique / heavy deps (toasty, rig, axum, ratatui, dioxus, …) stay
# in their own manifests.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.103"
thiserror = "2"
async-trait = "0.1"
dirs = "6"
sha2 = "0.11"
tracing = "0.1"
time = { version = "0.3.53", features = ["formatting", "macros"] }
uuid = { version = "1.23.4", features = ["v4", "v7"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "charset",
    "query",
    "json",
] }

# Vendored open-lark 0.14.0 with nullable event fields (user_id/union_id/name/
# tenant_key arrive as null for bot mentions or without contact scope, and the
# stock struct drops the whole message) + payload snippet in the ws error log.
[patch.crates-io]
open-lark = { path = "vendor/open-lark" }
